Fixing earn-money card on mobile

--- a/styles/css/all-apps/vtex.flex-layout.css
+++ b/styles/css/all-apps/vtex.flex-layout.css
@@ -24,14 +24,12 @@
 }
 
 .flexCol--allAppsEarnMoney {
-  width: 50%;
   padding: 3rem 0 0 4rem;
   border-radius: 8px;
 }
-.flexCol--allAppsEarnMoney {
+
+.flexRow--earnMoneyText {
   width: 50%;
-  padding: 3rem 0 0 4rem;
-  border-radius: 8px;
 }
 
 .flexRow--allAppsBanners{
@@ -63,10 +61,13 @@
   background: #25354D;
 }
 
+.flexCol--testimonyAllApps {
+  margin-top: 2rem;
+}
+
 @media(min-width: 600px){
 
   .flexCol--allAppsEarnMoney {
-    width: 50%;
     padding: 3rem 0 0 4rem;
     border-radius: 8px;
   }
