--- a/styles/css/all-apps/vtex.rich-text.css
+++ b/styles/css/all-apps/vtex.rich-text.css
@@ -14,3 +14,7 @@
   margin: 0;
   padding: 0;
 }
+
+.paragraph--noLineHeight {
+  line-height: unset;
+}
