--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -5,5 +5,12 @@
 
 .imageElement--earnMoney {
   border-radius: 0.5rem;
-  height: 100%;
+  height: auto;
+}
+
+@media (min-width: 600px) {
+  .imageElement--earnMoney {
+    border-radius: 0.5rem;
+    height: 100%;
+  }
 }
